--- a/keyset-geom/Cargo.toml
+++ b/keyset-geom/Cargo.toml
@@ -7,8 +7,6 @@ description = "Geometry types and conversions for keyset"
 keywords = ["keyset"]
 categories = ["none"]
 
-metadata.docs.rs.all-features = true
-
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
@@ -16,8 +14,9 @@ rust-version.workspace = true
 repository.workspace = true
 license.workspace = true
 
-[dependencies]
-euclid = "0.22"
-isclose = { version = "0.1", features = ["euclid"] }
+[package.metadata.docs.rs]
+all-features = true
 
-[dev-dependencies]
+[dependencies]
+euclid.workspace = true
+isclose = { workspace = true, features = ["euclid"] }
