--- a/keyset-profile/Cargo.toml
+++ b/keyset-profile/Cargo.toml
@@ -7,8 +7,6 @@ description = "Profile type and functionality for keyset"
 keywords = ["keyset"]
 categories = ["none"]
 
-metadata.docs.rs.all-features = true
-
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
@@ -16,22 +14,24 @@ rust-version.workspace = true
 repository.workspace = true
 license.workspace = true
 
+[package.metadata.docs.rs]
+all-features = true
+
 [features]
 toml = ["serde", "dep:toml"]
-json = ["serde", "serde_json"]
+json = ["serde", "dep:serde_json"]
 
 [dependencies]
-color = { package = "keyset-color", path = "../keyset-color", version = "0.3.2", features = ["rgb"] }
-geom = { package = "keyset-geom", path = "../keyset-geom", version = "0.3.2" }
-key = { package = "keyset-key", path = "../keyset-key", version = "0.3.2" }
+geom.workspace = true
+key.workspace = true
 
-interp = { version = "1.0", features = ["interp_array"] }
-itertools = "0.12"
-serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
-serde_json = { version = "1.0", optional = true }
-toml = { version = "0.8", default-features = false, features = ["parse"], optional = true }
+interp.workspace = true
+itertools.workspace = true
+serde = { workspace = true, optional = true }
+serde_json = { workspace = true, optional = true }
+toml = { workspace = true, optional = true }
 
 [dev-dependencies]
-assert_matches = "1.5"
-isclose = { version = "0.1", features = ["euclid"] }
-unindent = "0.2"
+assert_matches.workspace = true
+isclose = { workspace = true, features = ["euclid"] }
+unindent.workspace = true
