--- a/keyset-key/Cargo.toml
+++ b/keyset-key/Cargo.toml
@@ -17,6 +17,9 @@ license.workspace = true
 [package.metadata.docs.rs]
 all-features = true
 
+[lints]
+workspace = true
+
 [features]
 kle = ["dep:kle-serial", "dep:serde_json", "color/rgb"]
 
