--- a/keyset-profile/Cargo.toml
+++ b/keyset-profile/Cargo.toml
@@ -17,6 +17,9 @@ license.workspace = true
 [package.metadata.docs.rs]
 all-features = true
 
+[lints]
+workspace = true
+
 [features]
 toml = ["serde", "dep:toml"]
 json = ["serde", "dep:serde_json"]
