--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,7 +41,45 @@ rgb = { version = "0.8", default-features = false }
 serde = { version = "1.0", default-features = false, features = ["derive"] }
 serde_json = "1.0"
 svg = "0.17"
-tiny-skia = "0.11"
+tiny-skia = { version = "0.11", default-features = false }
 toml = { version = "0.8", default-features = false, features = ["parse"] }
 ttf-parser = { version = "0.20", default-features = false, features = ["std"] }
 unindent = "0.2"
+
+[workspace.lints.rust]
+future-incompatible = "warn"
+let-underscore = "warn"
+nonstandard-style = "warn"
+rust-2018-compatibility = "warn"
+rust-2018-idioms = "warn"
+rust-2021-compatibility = "warn"
+rust-2024-compatibility = "warn"
+unused = "warn"
+
+missing-copy-implementations = "warn"
+missing-debug-implementations = "warn"
+missing-docs = "warn"
+non-ascii-idents = "warn"
+single-use-lifetimes = "warn"
+trivial-casts = "warn"
+trivial-numeric-casts = "warn"
+unit-bindings = "warn"
+unsafe-code = "forbid"
+unstable-features = "warn"
+# unused-crate-dependencies = "warn" # TODO split examples and lib.rs in keyset
+unused-lifetimes = "warn"
+unused-qualifications = "warn"
+variant-size-differences = "warn"
+
+[workspace.lints.clippy]
+all = "warn"
+correctness = "warn"
+suspicious = "warn"
+style = "warn"
+complexity = "warn"
+perf = "warn"
+pedantic = "warn"
+cargo = "warn"
+nursery = "warn"
+
+suboptimal-flops = { level = "allow", priority = 1 } # TODO rust-lang/rust-clippy#6867
