--- a/keyset-font/Cargo.toml
+++ b/keyset-font/Cargo.toml
@@ -17,6 +17,9 @@ license.workspace = true
 [package.metadata.docs.rs]
 all-features = true
 
+[lints]
+workspace = true
+
 [dependencies]
 geom.workspace = true
 
