--- a/keyset-drawing/Cargo.toml
+++ b/keyset-drawing/Cargo.toml
@@ -35,6 +35,7 @@ profile.workspace = true
 log.workspace = true
 miniz_oxide = { workspace = true, optional = true }
 pdf-writer = { workspace = true, optional = true }
+saturate.workspace = true
 tiny-skia = { workspace = true, features = ["default"], optional = true }
 svg = { workspace = true, optional = true }
 
