--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ miniz_oxide = "0.7"
 ouroboros = "0.18"
 pdf-writer = "0.9"
 rgb = { version = "0.8", default-features = false }
+saturate = { git = "https://github.com/staticintlucas/saturate", branch = "main" }
 serde = { version = "1.0", default-features = false, features = ["derive"] }
 serde_json = "1.0"
 svg = "0.17"
@@ -86,3 +87,4 @@ unseparated_literal_suffix = "warn"
 unwrap_used = "warn"
 
 suboptimal-flops = { level = "allow", priority = 1 } # TODO rust-lang/rust-clippy#6867
+module-name-repetitions = { level = "allow", priority = 1 } # TODO rust-lang/rust-clippy#8524
