--- a/keyset-geom/Cargo.toml
+++ b/keyset-geom/Cargo.toml
@@ -23,3 +23,4 @@ workspace = true
 [dependencies]
 euclid.workspace = true
 isclose = { workspace = true, features = ["euclid"] }
+saturate.workspace = true
