--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ miniz_oxide = "0.7"
 ouroboros = "0.18"
 pdf-writer = "0.9"
 rgb = { version = "0.8", default-features = false }
-saturate = { git = "https://github.com/staticintlucas/saturate", branch = "main" }
+saturate = "0.1"
 serde = { version = "1.0", default-features = false, features = ["derive"] }
 serde_json = "1.0"
 svg = "0.17"
