Replace unindent with indoc

--- a/keyset-drawing/Cargo.toml
+++ b/keyset-drawing/Cargo.toml
@@ -40,5 +40,5 @@ tiny-skia = { workspace = true, features = ["default"], optional = true }
 svg = { workspace = true, optional = true }
 
 [dev-dependencies]
+indoc.workspace = true
 isclose = { workspace = true, features = ["euclid"] }
-unindent.workspace = true
