--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ profile = { package = "keyset-profile", path = "keyset-profile", version = "0.3.
 
 assert_matches = "1.5"
 euclid = "0.22"
+indoc = "2.0"
 interp = { version = "1.0", features = ["interp_array"] }
 isclose = "0.1"
 kle-serial = "0.3"
@@ -43,7 +44,6 @@ svg = "0.17"
 tiny-skia = { version = "0.11", default-features = false }
 toml = { version = "0.8", default-features = false, features = ["parse"] }
 ttf-parser = { version = "0.21", default-features = false, features = ["std"] }
-unindent = "0.2"
 
 [workspace.lints.rust]
 future-incompatible = "warn"
