--- a/keyset-key/Cargo.toml
+++ b/keyset-key/Cargo.toml
@@ -32,5 +32,5 @@ serde_json = { workspace = true, optional = true }
 
 [dev-dependencies]
 assert_matches.workspace = true
+indoc.workspace = true
 isclose = { workspace = true, features = ["euclid"] }
-unindent.workspace = true
