--- a/keyset-key/Cargo.toml
+++ b/keyset-key/Cargo.toml
@@ -28,6 +28,7 @@ color.workspace = true
 geom.workspace = true
 
 kle-serial = { workspace = true, optional = true }
+lazy-regex.workspace = true
 serde_json = { workspace = true, optional = true }
 
 [dev-dependencies]
