--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v4.4.0
+  rev: v4.6.0
   hooks:
   - id: check-added-large-files
   - id: check-json
@@ -14,21 +14,40 @@ repos:
   - id: mixed-line-ending
     args: [--fix=lf]
   - id: trailing-whitespace
-- repo: https://github.com/doublify/pre-commit-rust
-  rev: v1.0
-  hooks:
-  - id: fmt
-    args: [--all, --, --check]
-    pass_filenames: false
-  - id: cargo-check
-  - id: clippy
-    args: [--all-targets, --all-features, --, -D, warnings]
 - repo: local
   hooks:
+  - id: cargo-fmt
+    name: cargo fmt
+    entry: cargo fmt
+    args: [--all, --, --check]
+    language: system
+    types: [rust]
+    pass_filenames: false
+  - id: cargo-check
+    name: cargo check
+    entry: cargo check
+    args: [--all-targets, --all-features, --config, "build.rustflags = ['-D', 'warnings']"]
+    language: system
+    types: [rust]
+    pass_filenames: false
+  - id: clippy
+    name: clippy
+    entry: cargo clippy
+    args: [--all-targets, --all-features, --config, "build.rustflags = ['-D', 'warnings']"]
+    language: system
+    types: [rust]
+    pass_filenames: false
+  - id: cargo-doc
+    name: cargo doc
+    entry: cargo doc
+    args: [--all-features, --config, "build.rustdocflags = ['-D', 'warnings']"]
+    language: system
+    types: [rust]
+    pass_filenames: false
   - id: cargo-test
     name: cargo test
     entry: cargo test
-    args: [--all-features]
+    args: [--all-features, --config, "build.rustflags = ['-D', 'warnings']"]
     language: system
     types: [rust]
     pass_filenames: false
