--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,7 +66,7 @@ trivial-numeric-casts = "warn"
 unit-bindings = "warn"
 unsafe-code = "forbid"
 unstable-features = "warn"
-# unused-crate-dependencies = "warn" # TODO split examples and lib.rs in keyset
+unused-crate-dependencies = "warn"
 unused-lifetimes = "warn"
 unused-qualifications = "warn"
 variant-size-differences = "warn"
