--- a/.clippy.toml
+++ b/.clippy.toml
@@ -1,3 +1,3 @@
 allow-unwrap-in-tests = true
 allowed-duplicate-crates = ["bitflags"]
-doc-valid-idents = ["sRGB", "OpenType", ".."]
+doc-valid-idents = ["sRGB", "OpenType", "InDesign", ".."]
