Make PNG file output fallible

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ key = { package = "keyset-key", path = "keyset-key", version = "0.3.2" }
 profile = { package = "keyset-profile", path = "keyset-profile", version = "0.3.2" }
 
 assert_matches = "1.5"
+array-util = "1.0"
 euclid = "0.22"
 indoc = "2.0"
 interp = { version = "1.0", features = ["interp_array"] }
