--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,21 +29,21 @@ profile = { package = "keyset-profile", path = "keyset-profile", version = "0.3.
 assert_matches = "1.5"
 euclid = "0.22"
 indoc = "2.0"
-interp = { version = "1.0", features = ["interp_array"] }
+interp = "2.0"
 isclose = "0.1"
 kle-serial = "0.3"
 log = "0.4"
-miniz_oxide = "0.7"
+miniz_oxide = "0.8"
 ouroboros = "0.18"
-pdf-writer = "0.9"
+pdf-writer = "0.12"
 rgb = { version = "0.8", default-features = false }
 saturate = "0.1"
 serde = { version = "1.0", default-features = false, features = ["derive"] }
 serde_json = "1.0"
-svg = "0.17"
+svg = "0.18"
 tiny-skia = { version = "0.11", default-features = false }
 toml = { version = "0.8", default-features = false, features = ["parse"] }
-ttf-parser = { version = "0.21", default-features = false, features = ["std"] }
+ttf-parser = { version = "0.25", default-features = false, features = ["std"] }
 
 [workspace.lints.rust]
 future-incompatible = "warn"
