--- a/.deny.toml
+++ b/.deny.toml
@@ -217,8 +217,10 @@ skip = [
     #"ansi_term@0.11.0",
     #{ crate = "ansi_term@0.11.0", reason = "you can specify a reason why it can't be updated/removed" },
 
-    # TODO remove this when pdf-writer and png both update to 2.x
+    # TODO remove this when png updates to 2.x
     "bitflags@1.3.2",
+    # TODO remove this when ouroboros updates to 0.13.x
+    "itertools@0.12.1",
 ]
 # Similarly to `skip` allows you to skip certain crates during duplicate
 # detection. Unlike skip, it also includes the entire tree of transitive
