--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,8 @@ jobs:
         with:
           toolchain: stable
           components: rustfmt, clippy
+      - name: Setup Python
+        uses: actions/setup-python@v5
       - name: Run pre-commit
         uses: pre-commit/action@v3.0.1
         with:
