--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,8 @@ jobs:
           components: rustfmt, clippy
       - name: Setup Python
         uses: actions/setup-python@v5
+        with:
+          python-version: 3.x
       - name: Run pre-commit
         uses: pre-commit/action@v3.0.1
         with:
