Tweak PNG tests to avoid coverage misses

--- a/keyset-drawing/Cargo.toml
+++ b/keyset-drawing/Cargo.toml
@@ -42,3 +42,4 @@ svg = { workspace = true, optional = true }
 [dev-dependencies]
 indoc.workspace = true
 isclose = { workspace = true, features = ["euclid"] }
+itertools.workspace = true
