--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ euclid = "0.22"
 indoc = "2.0"
 interp = "2.0"
 isclose = "0.1"
+itertools = "0.13"
 kle-serial = "0.3"
 log = "0.4"
 miniz_oxide = "0.8"
