--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,13 +38,13 @@ miniz_oxide = "0.8"
 ouroboros = "0.18"
 pdf-writer = "0.12"
 rgb = { version = "0.8", default-features = false }
+rustybuzz = "0.20"
 saturate = "0.1"
 serde = { version = "1.0", default-features = false, features = ["derive"] }
 serde_json = "1.0"
 svg = "0.18"
 tiny-skia = { version = "0.11", default-features = false }
 toml = { version = "0.8", default-features = false, features = ["parse"] }
-ttf-parser = { version = "0.25", default-features = false, features = ["std"] }
 
 [workspace.lints.rust]
 future-incompatible = "warn"
