--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,16 +14,12 @@ jobs:
         with:
           toolchain: stable
           components: rustfmt, clippy
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: 3.x
-      - name: Run pre-commit
-        uses: pre-commit/action@v3.0.1
-        with:
-          extra_args: --all-files
+      - name: Run rustfmt
+        run: cargo fmt --all -- --check
+      - name: Run clippy
+        run: cargo clippy --all-targets --all-features
         env:
-          SKIP: cargo-test
+          RUSTFLAGS: -D warnings
       - name: Run cargo-deny
         uses: EmbarkStudios/cargo-deny-action@v1
         with:
@@ -49,6 +45,21 @@ jobs:
           RUSTFLAGS: -D warnings
       - name: Run cargo test
         run: cargo test --all-features
+
+  docs:
+    name: Build docs
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup toolchain
+        uses: dtolnay/rust-toolchain@v1
+        with:
+          toolchain: stable
+      - name: Build docs
+        run: cargo doc --all-features --no-deps --document-private-items
+        env:
+          RUSTDOCFLAGS: -D warnings
 
   coverage:
     name: Test coverage
