--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,10 +56,16 @@ jobs:
         uses: dtolnay/rust-toolchain@v1
         with:
           toolchain: stable
+      - name: Setup cargo-rdme
+        uses: taiki-e/install-action@v2
+        with:
+          tool: cargo-rdme
       - name: Build docs
         run: cargo doc --all-features --no-deps --document-private-items
         env:
           RUSTDOCFLAGS: -D warnings
+      - name: Check README
+        run: cargo rdme --check
 
   coverage:
     name: Test coverage
