--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Setup toolchain
         uses: dtolnay/rust-toolchain@v1
         with:
-          toolchain: stable
+          toolchain: nightly-2025-02-25
           components: rustfmt, clippy
       - name: Run rustfmt
         run: cargo fmt --all -- --check
