--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,12 +47,12 @@ tiny-skia = { version = "0.11", default-features = false }
 toml = { version = "0.8", default-features = false, features = ["parse"] }
 
 [workspace.lints.rust]
+deprecated-safe = "warn"
 future-incompatible = "warn"
+keyword-idents = "warn"
 let-underscore = "warn"
 nonstandard-style = "warn"
-rust-2018-compatibility = "warn"
-rust-2018-idioms = "warn"
-rust-2021-compatibility = "warn"
+refining-impl-trait = "warn"
 rust-2024-compatibility = "warn"
 edition-2024-expr-fragment-specifier = { level = "allow", priority = 1 }
 unused = "warn"
@@ -88,6 +88,9 @@ try_err = "warn"
 unseparated_literal_suffix = "warn"
 unwrap_used = "warn"
 
+enum-glob-use = { level = "allow", priority = 1 }
+
 suboptimal-flops = { level = "allow", priority = 1 } # TODO rust-lang/rust-clippy#6867
 module-name-repetitions = { level = "allow", priority = 1 } # TODO rust-lang/rust-clippy#8524
 literal-string-with-formatting-args = { level = "allow", priority = 1 } # TODO rust-lang/rust-clippy#13885, will be fixed in 1.87
+missing-const-for-fn = { level = "allow", priority = 1 } # TODO rust-lang/rust-clippy#14020, should be fixed soon
