--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,9 +42,9 @@ rustybuzz = "0.20"
 saturate = "0.1"
 serde = { version = "1.0", default-features = false, features = ["derive"] }
 serde_json = "1.0"
+soml = { version = "0.1", default-features = false, features = ["std"] }
 svg = "0.18"
 tiny-skia = { version = "0.11", default-features = false }
-toml = { version = "0.8", default-features = false, features = ["parse"] }
 
 [workspace.lints.rust]
 deprecated-safe = "warn"
