--- a/.deny.toml
+++ b/.deny.toml
@@ -107,7 +107,6 @@ allow = [
     "Unicode-3.0", # Used by unicode-ident for data files
     "BSD-2-Clause", # Used by arrayref
     "BSD-3-Clause", # Used by tiny-skia
-    # "Zlib", # Used by slotmap (dependency of fontdb)
 ]
 # The confidence threshold for detecting a license from license text.
 # The higher the value, the more closely the license text must be to the
@@ -246,9 +245,9 @@ allow-registry = ["https://github.com/rust-lang/crates.io-index"]
 allow-git = []
 
 [sources.allow-org]
-# 1 or more github.com organizations to allow git sources for
+# github.com organizations to allow git sources for
 github = []
-# 1 or more gitlab.com organizations to allow git sources for
+# gitlab.com organizations to allow git sources for
 gitlab = []
-# 1 or more bitbucket.org organizations to allow git sources for
+# bitbucket.org organizations to allow git sources for
 bitbucket = []
