--- a/keyset-font/Cargo.toml
+++ b/keyset-font/Cargo.toml
@@ -23,6 +23,7 @@ workspace = true
 [dependencies]
 geom.workspace = true
 
+isclose.workspace = true
 itertools.workspace = true
 ouroboros.workspace = true
 rustybuzz.workspace = true
