Use macro to declare unit types

--- a/keyset-geom/Cargo.toml
+++ b/keyset-geom/Cargo.toml
@@ -23,4 +23,5 @@ workspace = true
 
 [dependencies]
 isclose = { workspace = true, features = ["euclid"] }
+paste.workspace = true
 saturate.workspace = true
