Make the rest of the crates work with new geom types

--- a/keyset-drawing/Cargo.toml
+++ b/keyset-drawing/Cargo.toml
@@ -41,5 +41,5 @@ svg = { workspace = true, optional = true }
 
 [dev-dependencies]
 indoc.workspace = true
-isclose = { workspace = true, features = ["euclid"] }
+isclose.workspace = true
 itertools.workspace = true
