rm -rf euclid, change tiny-skia features

--- a/keyset-color/Cargo.toml
+++ b/keyset-color/Cargo.toml
@@ -23,5 +23,5 @@ workspace = true
 [dependencies]
 isclose.workspace = true
 saturate.workspace = true
-tiny-skia = { workspace = true, features = ["std"], optional = true }
+tiny-skia = { workspace = true, optional = true }
 rgb = { workspace = true, optional = true }
