--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,7 +44,7 @@ serde = { version = "1.0", default-features = false, features = ["derive"] }
 serde_json = "1.0"
 soml = { version = "0.1", default-features = false, features = ["std"] }
 svg = "0.18"
-tiny-skia = { version = "0.11", default-features = false }
+tiny-skia = "0.11"
 
 [workspace.lints.rust]
 deprecated_safe = "warn"
