--- a/keyset-key/Cargo.toml
+++ b/keyset-key/Cargo.toml
@@ -33,4 +33,4 @@ serde_json = { workspace = true, optional = true }
 [dev-dependencies]
 assert_matches.workspace = true
 indoc.workspace = true
-isclose = { workspace = true, features = ["euclid"] }
+isclose.workspace = true
