--- a/keyset-profile/Cargo.toml
+++ b/keyset-profile/Cargo.toml
@@ -38,5 +38,5 @@ soml = { workspace = true, optional = true }
 [dev-dependencies]
 assert_matches.workspace = true
 indoc.workspace = true
-isclose = { workspace = true, features = ["euclid"] }
+isclose.workspace = true
 serde_json.workspace = true
