--- a/keyset-font/Cargo.toml
+++ b/keyset-font/Cargo.toml
@@ -24,9 +24,9 @@ workspace = true
 geom.workspace = true
 
 itertools.workspace = true
+num-traits.workspace = true
 ouroboros.workspace = true
 rustybuzz.workspace = true
-saturate.workspace = true
 
 [dev-dependencies]
 assert_matches.workspace = true
