--- a/keyset-geom/Cargo.toml
+++ b/keyset-geom/Cargo.toml
@@ -23,5 +23,5 @@ workspace = true
 
 [dependencies]
 isclose.workspace = true
+num-traits.workspace = true
 paste.workspace = true
-saturate.workspace = true
