--- a/keyset-profile/Cargo.toml
+++ b/keyset-profile/Cargo.toml
@@ -30,7 +30,6 @@ geom.workspace = true
 key.workspace = true
 
 interp.workspace = true
-saturate.workspace = true
 serde = { workspace = true, optional = true }
 serde_json = { workspace = true, optional = true }
 soml = { workspace = true, optional = true }
@@ -39,4 +38,5 @@ soml = { workspace = true, optional = true }
 assert_matches.workspace = true
 indoc.workspace = true
 isclose.workspace = true
+num-traits.workspace = true
 serde_json.workspace = true
