--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,6 @@ profile = { package = "keyset-profile", path = "keyset-profile", version = "0.3.
 
 assert_matches = "1.5"
 indoc = "2.0"
-interp = "2.0"
 isclose = "0.3"
 itertools = "0.14"
 kle-serial = "0.3"
@@ -40,6 +39,7 @@ rgb = { version = "0.8", default-features = false }
 rustybuzz = "0.20"
 serde = { version = "1.0", default-features = false, features = ["derive"] }
 serde_json = "1.0"
+serde-untagged = "0.1"
 soml = { version = "0.2", default-features = false, features = ["std"] }
 svg = "0.18"
 tiny-skia = "0.11"
