--- a/keyset-profile/Cargo.toml
+++ b/keyset-profile/Cargo.toml
@@ -23,15 +23,15 @@ workspace = true
 [features]
 toml = ["serde", "dep:soml"]
 json = ["serde", "dep:serde_json"]
-serde = ["dep:serde"]
+serde = ["dep:serde", "dep:serde-untagged"]
 
 [dependencies]
 geom.workspace = true
 key.workspace = true
 
-interp.workspace = true
 serde = { workspace = true, optional = true }
 serde_json = { workspace = true, optional = true }
+serde-untagged = { workspace = true, optional = true }
 soml = { workspace = true, optional = true }
 
 [dev-dependencies]
@@ -39,4 +39,4 @@ assert_matches.workspace = true
 indoc.workspace = true
 isclose.workspace = true
 num-traits.workspace = true
-serde_json.workspace = true
+soml.workspace = true
