Use taplo to format TOML files

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup tools
         uses: taiki-e/install-action@v2
         with:
-          tool: cargo-shear
+          tool: cargo-shear, taplo
       - name: Run rustfmt
         run: cargo fmt --all -- --check
       - name: Run clippy
@@ -26,6 +26,8 @@ jobs:
           RUSTFLAGS: -D warnings
       - name: Run cargo-shear
         run: cargo shear
+      - name: Run taplo fmt
+        run: taplo fmt --check
       - name: Run cargo-deny
         uses: EmbarkStudios/cargo-deny-action@v1
         with:
