--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ itertools = "0.14"
 kle-serial = "0.3"
 miniz_oxide = "0.8"
 num-traits = "0.2"
-paste = "1.0"
+paste = { package = "pastey", version = "0.1" }
 pdf-writer = "0.13"
 rgb = { version = "0.8", default-features = false }
 rustybuzz = "0.20"
