Export geom crate from keyset too

--- a/keyset/Cargo.toml
+++ b/keyset/Cargo.toml
@@ -44,5 +44,6 @@ svg-drawing = ["drawing/svg"]
 color.workspace = true
 drawing.workspace = true
 font.workspace = true
+geom.workspace = true
 key.workspace = true
 profile.workspace = true
