--- a/.clippy.toml
+++ b/.clippy.toml
@@ -1,3 +1,4 @@
+allow-panic-in-tests = true
 allow-unwrap-in-tests = true
 allowed-duplicate-crates = ["bitflags"]
 doc-valid-idents = ["sRGB", "OpenType", "InDesign", ".."]
